--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@ NODE_ENV=production
 # NODE_ENV=development
 
 PORT=3000
-DATABASE=mongodb+srv://kashif:<PASSWORD>@cluster0.r7eown4.mongodb.net/task-app?retryWrites=true&w=majority
+DATABASE=mongodb+srv://kashif:<PASSWORD>@cluster0.r7eown4.mongodb.net/nodejs-project?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=oTQRDKAM1vRQvXoM
 
