--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "html-to-text": "^9.0.5",
+    "http-status": "^1.7.3",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
