--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
-NODE_ENV=production
-# NODE_ENV=development
+# NODE_ENV=production
+NODE_ENV=development
 
 PORT=3000
 DATABASE=mongodb+srv://kashif:<PASSWORD>@cluster0.r7eown4.mongodb.net/nodejs-project?retryWrites=true&w=majority
